--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@ span {
     <div class="balloon">
       <div><span>☺</span>
       </div>
+      <div><span>H</span>
+      </div>
       <div><span>B</span>
       </div>
       <div><span>D</span>
@@ -307,7 +309,8 @@ span {
       <div><span>☺</span>
       </div>
     </div>
-    <h1>omjipanggg</h1>
+    <h1>Gopika</h1>
+    <h4>Wishing you a day as bright as your smile, as sweet as your dreams, and as special as you are! Happy birthday! May this year bring you endless joy, exciting surprises, and all the success you deserve. Here's to another fabulous year ahead!</h4>
 
   </div>
 </body></html>
